k8s/emailapp.yml
apiVersion: v1
kind: Service
metadata:
  name: email-api
  labels:
    app: email
    role: api
spec:
  type: LoadBalancer
  selector:
    app: email
    role: api
  ports:
  - port: 80
