k8s/ingress.yml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-nginx
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    ingressClassName: nginx
    rules:
    - host: escalona-2204-training-aks.westus.cloudapp.azure.com
      http:
        paths:
        - pathType: Prefix
          backend:
            service:
              name: email-api
              port:
                number: 80
          path: /email(/|$)(.*)
        - pathType: Prefix
          backend:
            service:
              name: email-ui
              port:
                number: 80
          path: /ui(/|$)(.*)
